--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ a {
     <h1>CUBINJA</h1>
     <button type="button" class="play-normal-btn">PLAY GAME</button>
     <button type="button" class="play-casual-btn">CASUAL MODE</button>
-    <div class="credits">A game by <a href="https://lohitakshnandan.github.io/Lohitaksh-Nandan/">Lohitaksh Nandan</a></div>
+    <div class="credits">A game by <a href="https://lohitakshnandan.github.io/myportfolio/">Lohitaksh Nandan</a></div>
   </div>
   <div class="menu menu--pause">
     <h1>Paused</h1>
